--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ const QUESTIONS = [
     { id: 22, axis: 'Institucional', text: '¿Las escuelas deberían enseñar más valores cívicos además de materias técnicas?', impact_factor: 1.0, weights: { "LIBRE": 3, "Nacional": 3, "Liberal": 3, "PINU-SD": 4, "DC": 5 } },
     { id: 23, axis: 'Institucional', text: '¿El Congreso debería forzar acuerdos políticos si es necesario para lograr cambios importantes?', impact_factor: 1.2, weights: { "LIBRE": 4, "Nacional": 2, "Liberal": 4, "PINU-SD": 1, "DC": 2 } },
     { id: 24, axis: 'Institucional', text: '¿El Consejo Nacional Electoral debería tener técnicos independientes y no gente de partidos?', impact_factor: 1.1, weights: { "LIBRE": 2, "Nacional": 3, "Liberal": 3, "PINU-SD": 5, "DC": 4 } },
-    { id: 25, axis: 'Institucional', text: '¿El país debería continuar con planes de empleo y tecnología como el Honduras 20/20?', impact_factor: 1.0, weights: { "LIBRE": 1, "Nacional": 5, "Liberal": 3, "PINU-SD": 2, "DC": 2 } },
+    { id: 25, axis: 'Institucional', text: '¿Debemos convertirnos en un Estado Libre Asociado de Estados Unidos?', impact_factor: 1.4, weights: { "LIBRE": 1, "Nacional": 2, "Liberal": 1, "PINU-SD": 1, "DC": 5 } },
 
     // --- EJE 6: Derechos Sociales y Sexuales ---
     { id: 26, axis: 'Social', text: '¿Debería permitirse el uso de la píldora de emergencia y debatirse el aborto por razones médicas?', impact_factor: 1.3, weights: { "LIBRE": 5, "Nacional": 1, "Liberal": 2, "PINU-SD": 4, "DC": 1 } },
