--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ const QUESTIONS = [
     { id: 31, axis: 'Internacional', text: '¿Honduras debería acercarse más a países latinoamericanos de izquierda que a Estados Unidos?', impact_factor: 1.2, weights: { "LIBRE": 5, "Nacional": 1, "Liberal": 3, "PINU-SD": 2, "DC": 2 } },
     { id: 32, axis: 'Internacional', text: '¿Honduras debería cooperar más con Estados Unidos en temas de seguridad y migración?', impact_factor: 1.2, weights: { "LIBRE": 2, "Nacional": 5, "Liberal": 4, "PINU-SD": 3, "DC": 3 } },
     { id: 33, axis: 'Internacional', text: '¿Honduras debería reconocer a China Taiwán?', impact_factor: 1.1, weights: { "LIBRE": 1, "Nacional": 5, "Liberal": 5, "PINU-SD": 1, "DC": 5 } },
-    { id: 34, axis: 'Internacional', text: '¿Honduras debería tener una política exterior abierta y sin depender de ningún bloque político?', impact_factor: 1.1, weights: { "LIBRE": 3, "Nacional": 3, "Liberal": 5, "PINU-SD": 4, "DC": 3 } },
+    { id: 34, axis: 'Internacional', text: 'Las relaciones de Honduras con países como Rusia, Cuba y Venezuela son productivas para el país.', impact_factor: 1.4, weights: { "LIBRE": 5, "Nacional": 1, "Liberal": 1, "PINU-SD": 2, "DC": 1 } },
     { id: 35, axis: 'Internacional', text: '¿Los migrantes deben recibir ayuda humanitaria y protección al pasar por Honduras?', impact_factor: 1.0, weights: { "LIBRE": 3, "Nacional": 2, "Liberal": 3, "PINU-SD": 4, "DC": 5 } }
 ];
 
